# agent_workflow_telemetry

./: .env copy.example  .gitignore  INTEGRATION_FIXED.md  MLFLOW_INTEGRATION_REVIEW.md  QUICK_TEST.md  README.md  TESTING.md  TEST_SUMMARY.md  UC_TABLE_SETUP.md  agent.py  check_databricks_table.py  config.py  create_otel_traces_simple.sql  create_traces_table.sql  list_databricks_resources.py  pyproject.toml  query_traces.py  readme-logs.md  requirements-dev.txt  requirements-test.txt  requirements.txt  run_test_workflow.sh  run_with_traces.sh  test_adk_otel_integration.py  test_log_export.py  test_otlp_export.py  test_trace_flush.py  verify_otel_config.py  workflow.py
.adk/: session.db
adk_templates/: __init__.py  instrumented_llm.py
agents/: __init__.py  bootstrap.py  clarifier.py  instrumented_llm_agent.py  reader.py  step_logging.py  summarizer.py  synthesizer.py
bicep/: README.md  main.bicep  parameters.example.json
bicep/modules/: identity.bicep
init/: __init__.py  __main__.py  databricks.py
observability/: __init__.py  adk_defaults.py  llm_callbacks.py  otel_sdk.py  otlp_headers.py  session_logs.py
scripts/: README.md  check_databricks_table.py  list_databricks_resources.py  query_span_details.py  query_traces.py  setup_uc_tracing.py
sql/mlflow_trace_tables/: README.md  mlflow_experiment_trace_metadata.sql  mlflow_experiment_trace_otel_logs.sql  (+3 more)
telemetry/: __init__.py  core.py  plugin.py
terraform/: README.md
tests/: __init__.py  test_e2e.py  test_init_otel_headers.py  test_otel_sdk.py  test_otlp_export.py  test_workflow.py
(+31 files in other folders)
